Extract CPU RAM SSD

--- a/notebooks/02_feature_engineering.ipynb
+++ b/notebooks/02_feature_engineering.ipynb
@@ -25,7 +25,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import re\n"
    ]
   },
   {
@@ -518,6 +519,506 @@
    ],
    "source": [
     "df[\"product_category\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4539df1b",
+   "metadata": {},
+   "source": [
+    "### Step 3: Hardware Feature Extraction (CPU, RAM, Storage)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f83ea25",
+   "metadata": {},
+   "source": [
+    "### CPU\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "d045d827",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# CPU patterns to search for in product descriptions\n",
+    "cpu_patterns = [\n",
+    "        r'i[3579][ -]?\\d{4,5}',        \n",
+    "        r'ryz\\s?[3579]\\s?\\d{3,4}',  \n",
+    "        r'ryzen\\s?[3579]\\s?\\d{3,4}',\n",
+    "        r'\\ba(4|6|8|9|10|12)\\b',\n",
+    "        r'\\ba(4|6|8|9|10|12)[ -]?\\d{3,4}'\n",
+    "        r'\\be[12]\\b',\n",
+    "        r'\\be[12][ -]?\\d{3,4}'\n",
+    "        r'celeron',\n",
+    "        r'\\bcel\\b',\n",
+    "        r'pentium',\n",
+    "        r'\\bpen\\b',\n",
+    "        r'athlon',\n",
+    "        r'\\bath\\b',\n",
+    "        r'\\bm[123]\\b',                 \n",
+    "    ]\n",
+    "# Function to extract CPU from product description\n",
+    "\n",
+    "def extract_cpu(text):\n",
+    "    if not isinstance(text, str):\n",
+    "        return \"unknown\"\n",
+    "    for pattern in cpu_patterns:\n",
+    "        match = re.search(pattern, text)\n",
+    "        if match:\n",
+    "            return match.group(0).replace(\" \", \"\").replace(\"-\", \"\")\n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "a4356410",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"cpu\"] = df[\"product_description\"].apply(extract_cpu)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "241bc9d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "cpu\n",
+       "pen        123\n",
+       "cel         88\n",
+       "i31115      77\n",
+       "i59300      62\n",
+       "i510300     62\n",
+       "i58250      57\n",
+       "i51035      51\n",
+       "i36006      48\n",
+       "i57300      46\n",
+       "i58300      43\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"cpu\"].value_counts().head(10)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "323f5e14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"cpu\"] = df[\"cpu\"].fillna(\"unknown\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "e86379c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to classify CPU vendor\n",
+    "\n",
+    "def classify_cpu_vendor(cpu):\n",
+    "    if not isinstance(cpu, str):\n",
+    "        return None\n",
+    "\n",
+    "    cpu = cpu.lower()\n",
+    "\n",
+    "    # Intel\n",
+    "    if (\n",
+    "        cpu.startswith(\"i\")\n",
+    "        or cpu in {\"cel\", \"celeron\", \"pentium\", \"pen\", \"pent\"}\n",
+    "    ):\n",
+    "        return \"intel\"\n",
+    "\n",
+    "    # AMD\n",
+    "    if (\n",
+    "        \"ryzen\" in cpu\n",
+    "        or \"ryz\" in cpu\n",
+    "        or \"athlon\" in cpu\n",
+    "        or cpu.startswith(\"a\")   \n",
+    "        or cpu.startswith(\"e\")  \n",
+    "    ):\n",
+    "        return \"amd\"\n",
+    "\n",
+    "    # Apple\n",
+    "    if cpu.startswith(\"m\"):\n",
+    "        return \"apple\"\n",
+    "\n",
+    "    return \"other\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "44740667",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"cpu_vendor\"] = df[\"cpu\"].apply(classify_cpu_vendor)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "9331faeb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "cpu_vendor\n",
+       "intel    1369\n",
+       "other     550\n",
+       "amd       466\n",
+       "apple      12\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"cpu_vendor\"].value_counts(dropna=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "b8b85b98",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"cpu_vendor\"] = df[\"cpu_vendor\"].fillna(\"unknown\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96c62e8e",
+   "metadata": {},
+   "source": [
+    "CPU vendor was derived from parsed CPU strings and grouped into high-level categories \n",
+    "(Intel, AMD, Apple, Unknown).  \n",
+    "This abstraction enables vendor-level analysis while remaining robust to noisy \n",
+    "and abbreviated CPU names commonly found in real-world listings.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a845bd18",
+   "metadata": {},
+   "source": [
+    "### RAM / SSD "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "3c17bca3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_ram(text):\n",
+    "    if not isinstance(text, str):\n",
+    "        return None\n",
+    "\n",
+    "    valid_ram = {2, 4, 8, 12, 16, 20, 32, 40, 64}\n",
+    "\n",
+    "  \n",
+    "    match = re.search(r'\\b(\\d{1,2})\\s?gb\\b', text)\n",
+    "    if match:\n",
+    "        ram = int(match.group(1))\n",
+    "        if ram in valid_ram:\n",
+    "            return ram\n",
+    "\n",
+    "    match = re.search(r'\\b(\\d{1,2})\\s?(ram|ddr)\\b', text)\n",
+    "    if match:\n",
+    "        ram = int(match.group(1))\n",
+    "        if ram in valid_ram:\n",
+    "            return ram\n",
+    "\n",
+    " \n",
+    "    if (\n",
+    "        re.search(r'i[3579]|ryzen|ryz|athlon|\\ba(4|6|8|9|10|12)\\b|\\be[12]\\b', text)\n",
+    "        or \"ssd\" in text\n",
+    "        or \"hdd\" in text\n",
+    "    ):\n",
+    "        match = re.search(r'\\b(2|4|8|12|16|20|32|40|64)\\b', text)\n",
+    "        if match:\n",
+    "            return int(match.group(1))\n",
+    "\n",
+    "    return None\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "a53684c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"ram_gb\"] = df[\"product_description\"].apply(extract_ram)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "22a44ff2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ram_gb\n",
+       "8.0     965\n",
+       "NaN     505\n",
+       "16.0    489\n",
+       "4.0     283\n",
+       "12.0     81\n",
+       "32.0     34\n",
+       "2.0      25\n",
+       "20.0     10\n",
+       "64.0      4\n",
+       "40.0      1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"ram_gb\"].value_counts(dropna=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "89b51079",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>product_description</th>\n",
+       "      <th>ram_gb</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1075</th>\n",
+       "      <td>lenovo leg y520 i5 7300 16 ssd256 1tb gtx 1060...</td>\n",
+       "      <td>16.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>918</th>\n",
+       "      <td>mac mini 2012 i7 8 1000 256</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>240</th>\n",
+       "      <td>acer i5 8265u 8 ssd256 mx130 tehn</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2152</th>\n",
+       "      <td>hp ryz 7 3700u 8 ssd256</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>359</th>\n",
+       "      <td>asus zen i7 11 16 512 mx450 tehn карта игорь</td>\n",
+       "      <td>16.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2356</th>\n",
+       "      <td>asus oled ryz 5 7520u 16 ssd512</td>\n",
+       "      <td>16.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>303</th>\n",
+       "      <td>lenovo i3 7020 4 ssd120 int tehn</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1053</th>\n",
+       "      <td>lenovo n5000 8 ssd256 tehn</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>164</th>\n",
+       "      <td>asus i5 7200 8 ssd240 920mx</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>226</th>\n",
+       "      <td>lenovo i3 1115g4 8 120 burd</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>293</th>\n",
+       "      <td>hp a6 9225 8 500 int</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62</th>\n",
+       "      <td>lenovo i3 6006 8 1tb gf920mx</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>157</th>\n",
+       "      <td>hp 17 i5 4210 12 1tb gf840 burd</td>\n",
+       "      <td>12.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1441</th>\n",
+       "      <td>acer eco i3 1115g4 8 ssd512 int tehn</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1097</th>\n",
+       "      <td>asus pen 6805u 8 ssd256 tehn отказ</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                    product_description  ram_gb\n",
+       "1075  lenovo leg y520 i5 7300 16 ssd256 1tb gtx 1060...    16.0\n",
+       "918                         mac mini 2012 i7 8 1000 256     8.0\n",
+       "240                   acer i5 8265u 8 ssd256 mx130 tehn     8.0\n",
+       "2152                            hp ryz 7 3700u 8 ssd256     8.0\n",
+       "359        asus zen i7 11 16 512 mx450 tehn карта игорь    16.0\n",
+       "2356                    asus oled ryz 5 7520u 16 ssd512    16.0\n",
+       "303                    lenovo i3 7020 4 ssd120 int tehn     4.0\n",
+       "1053                         lenovo n5000 8 ssd256 tehn     8.0\n",
+       "164                         asus i5 7200 8 ssd240 920mx     8.0\n",
+       "226                         lenovo i3 1115g4 8 120 burd     8.0\n",
+       "293                                hp a6 9225 8 500 int     8.0\n",
+       "62                         lenovo i3 6006 8 1tb gf920mx     8.0\n",
+       "157                     hp 17 i5 4210 12 1tb gf840 burd    12.0\n",
+       "1441               acer eco i3 1115g4 8 ssd512 int tehn     8.0\n",
+       "1097                 asus pen 6805u 8 ssd256 tehn отказ     8.0"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df[\"ram_gb\"].notna()][[\"product_description\", \"ram_gb\"]].sample(15)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "f4519794",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def extract_storage(text):\n",
+    "    if not isinstance(text, str):\n",
+    "        return None\n",
+    "\n",
+    "\n",
+    "    has_ssd = \"ssd\" in text\n",
+    "    has_hdd = \"hdd\" in text\n",
+    "\n",
+    "    if has_ssd and has_hdd:\n",
+    "        return \"ssd+hdd\"\n",
+    "    if has_ssd:\n",
+    "        return \"ssd\"\n",
+    "    if has_hdd:\n",
+    "        return \"hdd\"\n",
+    "\n",
+    "    return \"hdd\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "3bf0590d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"storage_type\"] = df[\"product_description\"].apply(extract_storage)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "c1b4d328",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "storage_type\n",
+       "ssd        1676\n",
+       "hdd         711\n",
+       "ssd+hdd       8\n",
+       "None          2\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"storage_type\"].value_counts(dropna=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "e1bd08ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"storage_type\"] = df[\"storage_type\"].fillna(\"unknown\")"
    ]
   }
  ],
